Implement submission CRUD
